--- a/src/main/resources/static/corp/applicant/applicant.css
+++ b/src/main/resources/static/corp/applicant/applicant.css
@@ -14,6 +14,10 @@ main {
 	margin-top: 30px;
 }
 
+.corp-main-menu td {
+  font-family: 'Noto Sans KR', Arial, sans-serif; /* td 단위로 명시 */
+}
+
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
